<resources>
    <string name="app_name">JuegoDeColores</string>
    <string name="game_title">Juego de Colores</string>
    <string name="welcome_message">¡Bienvenido!</string>
    <string name="start_game">Iniciar Juego</string>
    <string name="game_rules_title">Reglas del Juego</string>
    <string name="game_rules">Presiona el botón del color que coincida con el cuadro superior. Tienes 30 segundos para conseguir el mayor número de aciertos. ¡Mucha suerte!</string>
    <string name="accept">Entendido</string>
    <string name="score_label">Puntaje:</string>
    <string name="time_label">Tiempo:</string>
    <string name="final_score_message">Tu puntaje final es:</string>
    <string name="high_score_message">Puntaje más alto:</string>
    <string name="score_history_title">Historial de la Sesión</string>
    <string name="play_again">Volver a Jugar</string>
    <string name="game_logo_description">logo del juego de colores</string>
</resources>
